docs/upbound-provider-azure/1.3/datafactory/v1beta1/linkedServiceAzureDatabricks.md
---
permalink: /upbound-provider-azure/1.3/datafactory/v1beta1/linkedServiceAzureDatabricks/
---

# datafactory.v1beta1.linkedServiceAzureDatabricks

"LinkedServiceAzureDatabricks is the Schema for the LinkedServiceAzureDatabrickss API. Manages a Linked Service (connection) between Azure Databricks and Azure Data Factory."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`obj spec.forProvider.newClusterConfig`](#obj-specforprovidernewclusterconfig)
      * [`fn withClusterVersion(clusterVersion)`](#fn-specforprovidernewclusterconfigwithclusterversion)
      * [`fn withCustomTags(customTags)`](#fn-specforprovidernewclusterconfigwithcustomtags)
      * [`fn withCustomTagsMixin(customTags)`](#fn-specforprovidernewclusterconfigwithcustomtagsmixin)
      * [`fn withDriverNodeType(driverNodeType)`](#fn-specforprovidernewclusterconfigwithdrivernodetype)
      * [`fn withInitScripts(initScripts)`](#fn-specforprovidernewclusterconfigwithinitscripts)
      * [`fn withInitScriptsMixin(initScripts)`](#fn-specforprovidernewclusterconfigwithinitscriptsmixin)
      * [`fn withLogDestination(logDestination)`](#fn-specforprovidernewclusterconfigwithlogdestination)
      * [`fn withMaxNumberOfWorkers(maxNumberOfWorkers)`](#fn-specforprovidernewclusterconfigwithmaxnumberofworkers)
      * [`fn withMinNumberOfWorkers(minNumberOfWorkers)`](#fn-specforprovidernewclusterconfigwithminnumberofworkers)
      * [`fn withNodeType(nodeType)`](#fn-specforprovidernewclusterconfigwithnodetype)
      * [`fn withSparkConfig(sparkConfig)`](#fn-specforprovidernewclusterconfigwithsparkconfig)
      * [`fn withSparkConfigMixin(sparkConfig)`](#fn-specforprovidernewclusterconfigwithsparkconfigmixin)
      * [`fn withSparkEnvironmentVariables(sparkEnvironmentVariables)`](#fn-specforprovidernewclusterconfigwithsparkenvironmentvariables)
      * [`fn withSparkEnvironmentVariablesMixin(sparkEnvironmentVariables)`](#fn-specforprovidernewclusterconfigwithsparkenvironmentvariablesmixin)
    * [`fn withAdbDomain(adbDomain)`](#fn-specforproviderwithadbdomain)
    * [`fn withAdditionalProperties(additionalProperties)`](#fn-specforproviderwithadditionalproperties)
    * [`fn withAdditionalPropertiesMixin(additionalProperties)`](#fn-specforproviderwithadditionalpropertiesmixin)
    * [`fn withAnnotations(annotations)`](#fn-specforproviderwithannotations)
    * [`fn withAnnotationsMixin(annotations)`](#fn-specforproviderwithannotationsmixin)
    * [`fn withDataFactoryId(dataFactoryId)`](#fn-specforproviderwithdatafactoryid)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withExistingClusterId(existingClusterId)`](#fn-specforproviderwithexistingclusterid)
    * [`fn withInstancePool(instancePool)`](#fn-specforproviderwithinstancepool)
    * [`fn withInstancePoolMixin(instancePool)`](#fn-specforproviderwithinstancepoolmixin)
    * [`fn withIntegrationRuntimeName(integrationRuntimeName)`](#fn-specforproviderwithintegrationruntimename)
    * [`fn withKeyVaultPassword(keyVaultPassword)`](#fn-specforproviderwithkeyvaultpassword)
    * [`fn withKeyVaultPasswordMixin(keyVaultPassword)`](#fn-specforproviderwithkeyvaultpasswordmixin)
    * [`fn withMsiWorkSpaceResourceId(msiWorkSpaceResourceId)`](#fn-specforproviderwithmsiworkspaceresourceid)
    * [`fn withNewClusterConfig(newClusterConfig)`](#fn-specforproviderwithnewclusterconfig)
    * [`fn withNewClusterConfigMixin(newClusterConfig)`](#fn-specforproviderwithnewclusterconfigmixin)
    * [`fn withParameters(parameters)`](#fn-specforproviderwithparameters)
    * [`fn withParametersMixin(parameters)`](#fn-specforproviderwithparametersmixin)
    * [`obj spec.forProvider.accessTokenSecretRef`](#obj-specforprovideraccesstokensecretref)
      * [`fn withKey(key)`](#fn-specforprovideraccesstokensecretrefwithkey)
      * [`fn withName(name)`](#fn-specforprovideraccesstokensecretrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specforprovideraccesstokensecretrefwithnamespace)
    * [`obj spec.forProvider.dataFactoryIdRef`](#obj-specforproviderdatafactoryidref)
      * [`fn withName(name)`](#fn-specforproviderdatafactoryidrefwithname)
      * [`obj spec.forProvider.dataFactoryIdRef.policy`](#obj-specforproviderdatafactoryidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdatafactoryidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdatafactoryidrefpolicywithresolve)
    * [`obj spec.forProvider.dataFactoryIdSelector`](#obj-specforproviderdatafactoryidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdatafactoryidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdatafactoryidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdatafactoryidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.dataFactoryIdSelector.policy`](#obj-specforproviderdatafactoryidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdatafactoryidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdatafactoryidselectorpolicywithresolve)
    * [`obj spec.forProvider.instancePool`](#obj-specforproviderinstancepool)
      * [`fn withClusterVersion(clusterVersion)`](#fn-specforproviderinstancepoolwithclusterversion)
      * [`fn withInstancePoolId(instancePoolId)`](#fn-specforproviderinstancepoolwithinstancepoolid)
      * [`fn withMaxNumberOfWorkers(maxNumberOfWorkers)`](#fn-specforproviderinstancepoolwithmaxnumberofworkers)
      * [`fn withMinNumberOfWorkers(minNumberOfWorkers)`](#fn-specforproviderinstancepoolwithminnumberofworkers)
    * [`obj spec.forProvider.keyVaultPassword`](#obj-specforproviderkeyvaultpassword)
      * [`fn withLinkedServiceName(linkedServiceName)`](#fn-specforproviderkeyvaultpasswordwithlinkedservicename)
      * [`fn withSecretName(secretName)`](#fn-specforproviderkeyvaultpasswordwithsecretname)
    * [`obj spec.forProvider.msiWorkSpaceResourceIdRef`](#obj-specforprovidermsiworkspaceresourceidref)
      * [`fn withName(name)`](#fn-specforprovidermsiworkspaceresourceidrefwithname)
      * [`obj spec.forProvider.msiWorkSpaceResourceIdRef.policy`](#obj-specforprovidermsiworkspaceresourceidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidermsiworkspaceresourceidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidermsiworkspaceresourceidrefpolicywithresolve)
    * [`obj spec.forProvider.msiWorkSpaceResourceIdSelector`](#obj-specforprovidermsiworkspaceresourceidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidermsiworkspaceresourceidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidermsiworkspaceresourceidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidermsiworkspaceresourceidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.msiWorkSpaceResourceIdSelector.policy`](#obj-specforprovidermsiworkspaceresourceidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidermsiworkspaceresourceidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidermsiworkspaceresourceidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`obj spec.initProvider.newClusterConfig`](#obj-specinitprovidernewclusterconfig)
      * [`fn withClusterVersion(clusterVersion)`](#fn-specinitprovidernewclusterconfigwithclusterversion)
      * [`fn withCustomTags(customTags)`](#fn-specinitprovidernewclusterconfigwithcustomtags)
      * [`fn withCustomTagsMixin(customTags)`](#fn-specinitprovidernewclusterconfigwithcustomtagsmixin)
      * [`fn withDriverNodeType(driverNodeType)`](#fn-specinitprovidernewclusterconfigwithdrivernodetype)
      * [`fn withInitScripts(initScripts)`](#fn-specinitprovidernewclusterconfigwithinitscripts)
      * [`fn withInitScriptsMixin(initScripts)`](#fn-specinitprovidernewclusterconfigwithinitscriptsmixin)
      * [`fn withLogDestination(logDestination)`](#fn-specinitprovidernewclusterconfigwithlogdestination)
      * [`fn withMaxNumberOfWorkers(maxNumberOfWorkers)`](#fn-specinitprovidernewclusterconfigwithmaxnumberofworkers)
      * [`fn withMinNumberOfWorkers(minNumberOfWorkers)`](#fn-specinitprovidernewclusterconfigwithminnumberofworkers)
      * [`fn withNodeType(nodeType)`](#fn-specinitprovidernewclusterconfigwithnodetype)
      * [`fn withSparkConfig(sparkConfig)`](#fn-specinitprovidernewclusterconfigwithsparkconfig)
      * [`fn withSparkConfigMixin(sparkConfig)`](#fn-specinitprovidernewclusterconfigwithsparkconfigmixin)
      * [`fn withSparkEnvironmentVariables(sparkEnvironmentVariables)`](#fn-specinitprovidernewclusterconfigwithsparkenvironmentvariables)
      * [`fn withSparkEnvironmentVariablesMixin(sparkEnvironmentVariables)`](#fn-specinitprovidernewclusterconfigwithsparkenvironmentvariablesmixin)
    * [`fn withAdbDomain(adbDomain)`](#fn-specinitproviderwithadbdomain)
    * [`fn withAdditionalProperties(additionalProperties)`](#fn-specinitproviderwithadditionalproperties)
    * [`fn withAdditionalPropertiesMixin(additionalProperties)`](#fn-specinitproviderwithadditionalpropertiesmixin)
    * [`fn withAnnotations(annotations)`](#fn-specinitproviderwithannotations)
    * [`fn withAnnotationsMixin(annotations)`](#fn-specinitproviderwithannotationsmixin)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withExistingClusterId(existingClusterId)`](#fn-specinitproviderwithexistingclusterid)
    * [`fn withInstancePool(instancePool)`](#fn-specinitproviderwithinstancepool)
    * [`fn withInstancePoolMixin(instancePool)`](#fn-specinitproviderwithinstancepoolmixin)
    * [`fn withIntegrationRuntimeName(integrationRuntimeName)`](#fn-specinitproviderwithintegrationruntimename)
    * [`fn withKeyVaultPassword(keyVaultPassword)`](#fn-specinitproviderwithkeyvaultpassword)
    * [`fn withKeyVaultPasswordMixin(keyVaultPassword)`](#fn-specinitproviderwithkeyvaultpasswordmixin)
    * [`fn withMsiWorkSpaceResourceId(msiWorkSpaceResourceId)`](#fn-specinitproviderwithmsiworkspaceresourceid)
    * [`fn withNewClusterConfig(newClusterConfig)`](#fn-specinitproviderwithnewclusterconfig)
    * [`fn withNewClusterConfigMixin(newClusterConfig)`](#fn-specinitproviderwithnewclusterconfigmixin)
    * [`fn withParameters(parameters)`](#fn-specinitproviderwithparameters)
    * [`fn withParametersMixin(parameters)`](#fn-specinitproviderwithparametersmixin)
    * [`obj spec.initProvider.instancePool`](#obj-specinitproviderinstancepool)
      * [`fn withClusterVersion(clusterVersion)`](#fn-specinitproviderinstancepoolwithclusterversion)
      * [`fn withInstancePoolId(instancePoolId)`](#fn-specinitproviderinstancepoolwithinstancepoolid)
      * [`fn withMaxNumberOfWorkers(maxNumberOfWorkers)`](#fn-specinitproviderinstancepoolwithmaxnumberofworkers)
      * [`fn withMinNumberOfWorkers(minNumberOfWorkers)`](#fn-specinitproviderinstancepoolwithminnumberofworkers)
    * [`obj spec.initProvider.keyVaultPassword`](#obj-specinitproviderkeyvaultpassword)
      * [`fn withLinkedServiceName(linkedServiceName)`](#fn-specinitproviderkeyvaultpasswordwithlinkedservicename)
      * [`fn withSecretName(secretName)`](#fn-specinitproviderkeyvaultpasswordwithsecretname)
    * [`obj spec.initProvider.msiWorkSpaceResourceIdRef`](#obj-specinitprovidermsiworkspaceresourceidref)
      * [`fn withName(name)`](#fn-specinitprovidermsiworkspaceresourceidrefwithname)
      * [`obj spec.initProvider.msiWorkSpaceResourceIdRef.policy`](#obj-specinitprovidermsiworkspaceresourceidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidermsiworkspaceresourceidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidermsiworkspaceresourceidrefpolicywithresolve)
    * [`obj spec.initProvider.msiWorkSpaceResourceIdSelector`](#obj-specinitprovidermsiworkspaceresourceidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidermsiworkspaceresourceidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidermsiworkspaceresourceidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidermsiworkspaceresourceidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.msiWorkSpaceResourceIdSelector.policy`](#obj-specinitprovidermsiworkspaceresourceidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidermsiworkspaceresourceidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidermsiworkspaceresourceidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of LinkedServiceAzureDatabricks

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"LinkedServiceAzureDatabricksSpec defines the desired state of LinkedServiceAzureDatabricks"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



## obj spec.forProvider.newClusterConfig

"Creates new clusters within the linked ADB instance as defined in the new_cluster_config block below."

### fn spec.forProvider.newClusterConfig.withClusterVersion

```ts
withClusterVersion(clusterVersion)
```

"Spark version of a the cluster."

### fn spec.forProvider.newClusterConfig.withCustomTags

```ts
withCustomTags(customTags)
```

"Tags for the cluster resource."

### fn spec.forProvider.newClusterConfig.withCustomTagsMixin

```ts
withCustomTagsMixin(customTags)
```

"Tags for the cluster resource."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.newClusterConfig.withDriverNodeType

```ts
withDriverNodeType(driverNodeType)
```

"Driver node type for the cluster."

### fn spec.forProvider.newClusterConfig.withInitScripts

```ts
withInitScripts(initScripts)
```

"User defined initialization scripts for the cluster."

### fn spec.forProvider.newClusterConfig.withInitScriptsMixin

```ts
withInitScriptsMixin(initScripts)
```

"User defined initialization scripts for the cluster."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.newClusterConfig.withLogDestination

```ts
withLogDestination(logDestination)
```

"Location to deliver Spark driver, worker, and event logs."

### fn spec.forProvider.newClusterConfig.withMaxNumberOfWorkers

```ts
withMaxNumberOfWorkers(maxNumberOfWorkers)
```

"Specifies the maximum number of worker nodes. It should be between 1 and 25000."

### fn spec.forProvider.newClusterConfig.withMinNumberOfWorkers

```ts
withMinNumberOfWorkers(minNumberOfWorkers)
```

"Specifies the minimum number of worker nodes. It should be between 1 and 25000. It defaults to 1."

### fn spec.forProvider.newClusterConfig.withNodeType

```ts
withNodeType(nodeType)
```

"Node type for the new cluster."

### fn spec.forProvider.newClusterConfig.withSparkConfig

```ts
withSparkConfig(sparkConfig)
```

"User-specified Spark configuration variables key-value pairs."

### fn spec.forProvider.newClusterConfig.withSparkConfigMixin

```ts
withSparkConfigMixin(sparkConfig)
```

"User-specified Spark configuration variables key-value pairs."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.newClusterConfig.withSparkEnvironmentVariables

```ts
withSparkEnvironmentVariables(sparkEnvironmentVariables)
```

"User-specified Spark environment variables key-value pairs."

### fn spec.forProvider.newClusterConfig.withSparkEnvironmentVariablesMixin

```ts
withSparkEnvironmentVariablesMixin(sparkEnvironmentVariables)
```

"User-specified Spark environment variables key-value pairs."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withAdbDomain

```ts
withAdbDomain(adbDomain)
```

"The domain URL of the databricks instance."

### fn spec.forProvider.withAdditionalProperties

```ts
withAdditionalProperties(additionalProperties)
```

"A map of additional properties to associate with the Data Factory Linked Service."

### fn spec.forProvider.withAdditionalPropertiesMixin

```ts
withAdditionalPropertiesMixin(additionalProperties)
```

"A map of additional properties to associate with the Data Factory Linked Service."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withAnnotations

```ts
withAnnotations(annotations)
```

"List of tags that can be used for describing the Data Factory Linked Service."

### fn spec.forProvider.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"List of tags that can be used for describing the Data Factory Linked Service."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withDataFactoryId

```ts
withDataFactoryId(dataFactoryId)
```

"The Data Factory ID in which to associate the Linked Service with. Changing this forces a new resource."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"The description for the Data Factory Linked Service."

### fn spec.forProvider.withExistingClusterId

```ts
withExistingClusterId(existingClusterId)
```

"The cluster_id of an existing cluster within the linked ADB instance."

### fn spec.forProvider.withInstancePool

```ts
withInstancePool(instancePool)
```

"Leverages an instance pool within the linked ADB instance as one instance_pool block defined below."

### fn spec.forProvider.withInstancePoolMixin

```ts
withInstancePoolMixin(instancePool)
```

"Leverages an instance pool within the linked ADB instance as one instance_pool block defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withIntegrationRuntimeName

```ts
withIntegrationRuntimeName(integrationRuntimeName)
```

"The integration runtime reference to associate with the Data Factory Linked Service."

### fn spec.forProvider.withKeyVaultPassword

```ts
withKeyVaultPassword(keyVaultPassword)
```

"Authenticate to ADB via Azure Key Vault Linked Service as defined in the key_vault_password block below."

### fn spec.forProvider.withKeyVaultPasswordMixin

```ts
withKeyVaultPasswordMixin(keyVaultPassword)
```

"Authenticate to ADB via Azure Key Vault Linked Service as defined in the key_vault_password block below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withMsiWorkSpaceResourceId

```ts
withMsiWorkSpaceResourceId(msiWorkSpaceResourceId)
```

"Authenticate to ADB via managed service identity."

### fn spec.forProvider.withNewClusterConfig

```ts
withNewClusterConfig(newClusterConfig)
```

"Creates new clusters within the linked ADB instance as defined in the new_cluster_config block below."

### fn spec.forProvider.withNewClusterConfigMixin

```ts
withNewClusterConfigMixin(newClusterConfig)
```

"Creates new clusters within the linked ADB instance as defined in the new_cluster_config block below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withParameters

```ts
withParameters(parameters)
```

"A map of parameters to associate with the Data Factory Linked Service."

### fn spec.forProvider.withParametersMixin

```ts
withParametersMixin(parameters)
```

"A map of parameters to associate with the Data Factory Linked Service."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.accessTokenSecretRef

"Authenticate to ADB via an access token."

### fn spec.forProvider.accessTokenSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.accessTokenSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.accessTokenSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.dataFactoryIdRef

"Reference to a Factory in datafactory to populate dataFactoryId."

### fn spec.forProvider.dataFactoryIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.dataFactoryIdRef.policy

"Policies for referencing."

### fn spec.forProvider.dataFactoryIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.dataFactoryIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.dataFactoryIdSelector

"Selector for a Factory in datafactory to populate dataFactoryId."

### fn spec.forProvider.dataFactoryIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.dataFactoryIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.dataFactoryIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.dataFactoryIdSelector.policy

"Policies for selection."

### fn spec.forProvider.dataFactoryIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.dataFactoryIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.instancePool

"Leverages an instance pool within the linked ADB instance as one instance_pool block defined below."

### fn spec.forProvider.instancePool.withClusterVersion

```ts
withClusterVersion(clusterVersion)
```

"Spark version of a the cluster."

### fn spec.forProvider.instancePool.withInstancePoolId

```ts
withInstancePoolId(instancePoolId)
```

"Identifier of the instance pool within the linked ADB instance."

### fn spec.forProvider.instancePool.withMaxNumberOfWorkers

```ts
withMaxNumberOfWorkers(maxNumberOfWorkers)
```

"The max number of worker nodes. Set this value if you want to enable autoscaling between the min_number_of_workers and this value. Omit this value to use a fixed number of workers defined in the min_number_of_workers property."

### fn spec.forProvider.instancePool.withMinNumberOfWorkers

```ts
withMinNumberOfWorkers(minNumberOfWorkers)
```

"The minimum number of worker nodes. Defaults to 1."

## obj spec.forProvider.keyVaultPassword

"Authenticate to ADB via Azure Key Vault Linked Service as defined in the key_vault_password block below."

### fn spec.forProvider.keyVaultPassword.withLinkedServiceName

```ts
withLinkedServiceName(linkedServiceName)
```

"Specifies the name of an existing Key Vault Data Factory Linked Service."

### fn spec.forProvider.keyVaultPassword.withSecretName

```ts
withSecretName(secretName)
```

"Specifies the secret name in Azure Key Vault that stores ADB access token."

## obj spec.forProvider.msiWorkSpaceResourceIdRef

"Reference to a Workspace in databricks to populate msiWorkSpaceResourceId."

### fn spec.forProvider.msiWorkSpaceResourceIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.msiWorkSpaceResourceIdRef.policy

"Policies for referencing."

### fn spec.forProvider.msiWorkSpaceResourceIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.msiWorkSpaceResourceIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.msiWorkSpaceResourceIdSelector

"Selector for a Workspace in databricks to populate msiWorkSpaceResourceId."

### fn spec.forProvider.msiWorkSpaceResourceIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.msiWorkSpaceResourceIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.msiWorkSpaceResourceIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.msiWorkSpaceResourceIdSelector.policy

"Policies for selection."

### fn spec.forProvider.msiWorkSpaceResourceIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.msiWorkSpaceResourceIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

## obj spec.initProvider.newClusterConfig

"Creates new clusters within the linked ADB instance as defined in the new_cluster_config block below."

### fn spec.initProvider.newClusterConfig.withClusterVersion

```ts
withClusterVersion(clusterVersion)
```

"Spark version of a the cluster."

### fn spec.initProvider.newClusterConfig.withCustomTags

```ts
withCustomTags(customTags)
```

"Tags for the cluster resource."

### fn spec.initProvider.newClusterConfig.withCustomTagsMixin

```ts
withCustomTagsMixin(customTags)
```

"Tags for the cluster resource."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.newClusterConfig.withDriverNodeType

```ts
withDriverNodeType(driverNodeType)
```

"Driver node type for the cluster."

### fn spec.initProvider.newClusterConfig.withInitScripts

```ts
withInitScripts(initScripts)
```

"User defined initialization scripts for the cluster."

### fn spec.initProvider.newClusterConfig.withInitScriptsMixin

```ts
withInitScriptsMixin(initScripts)
```

"User defined initialization scripts for the cluster."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.newClusterConfig.withLogDestination

```ts
withLogDestination(logDestination)
```

"Location to deliver Spark driver, worker, and event logs."

### fn spec.initProvider.newClusterConfig.withMaxNumberOfWorkers

```ts
withMaxNumberOfWorkers(maxNumberOfWorkers)
```

"Specifies the maximum number of worker nodes. It should be between 1 and 25000."

### fn spec.initProvider.newClusterConfig.withMinNumberOfWorkers

```ts
withMinNumberOfWorkers(minNumberOfWorkers)
```

"Specifies the minimum number of worker nodes. It should be between 1 and 25000. It defaults to 1."

### fn spec.initProvider.newClusterConfig.withNodeType

```ts
withNodeType(nodeType)
```

"Node type for the new cluster."

### fn spec.initProvider.newClusterConfig.withSparkConfig

```ts
withSparkConfig(sparkConfig)
```

"User-specified Spark configuration variables key-value pairs."

### fn spec.initProvider.newClusterConfig.withSparkConfigMixin

```ts
withSparkConfigMixin(sparkConfig)
```

"User-specified Spark configuration variables key-value pairs."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.newClusterConfig.withSparkEnvironmentVariables

```ts
withSparkEnvironmentVariables(sparkEnvironmentVariables)
```

"User-specified Spark environment variables key-value pairs."

### fn spec.initProvider.newClusterConfig.withSparkEnvironmentVariablesMixin

```ts
withSparkEnvironmentVariablesMixin(sparkEnvironmentVariables)
```

"User-specified Spark environment variables key-value pairs."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withAdbDomain

```ts
withAdbDomain(adbDomain)
```

"The domain URL of the databricks instance."

### fn spec.initProvider.withAdditionalProperties

```ts
withAdditionalProperties(additionalProperties)
```

"A map of additional properties to associate with the Data Factory Linked Service."

### fn spec.initProvider.withAdditionalPropertiesMixin

```ts
withAdditionalPropertiesMixin(additionalProperties)
```

"A map of additional properties to associate with the Data Factory Linked Service."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withAnnotations

```ts
withAnnotations(annotations)
```

"List of tags that can be used for describing the Data Factory Linked Service."

### fn spec.initProvider.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"List of tags that can be used for describing the Data Factory Linked Service."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"The description for the Data Factory Linked Service."

### fn spec.initProvider.withExistingClusterId

```ts
withExistingClusterId(existingClusterId)
```

"The cluster_id of an existing cluster within the linked ADB instance."

### fn spec.initProvider.withInstancePool

```ts
withInstancePool(instancePool)
```

"Leverages an instance pool within the linked ADB instance as one instance_pool block defined below."

### fn spec.initProvider.withInstancePoolMixin

```ts
withInstancePoolMixin(instancePool)
```

"Leverages an instance pool within the linked ADB instance as one instance_pool block defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withIntegrationRuntimeName

```ts
withIntegrationRuntimeName(integrationRuntimeName)
```

"The integration runtime reference to associate with the Data Factory Linked Service."

### fn spec.initProvider.withKeyVaultPassword

```ts
withKeyVaultPassword(keyVaultPassword)
```

"Authenticate to ADB via Azure Key Vault Linked Service as defined in the key_vault_password block below."

### fn spec.initProvider.withKeyVaultPasswordMixin

```ts
withKeyVaultPasswordMixin(keyVaultPassword)
```

"Authenticate to ADB via Azure Key Vault Linked Service as defined in the key_vault_password block below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withMsiWorkSpaceResourceId

```ts
withMsiWorkSpaceResourceId(msiWorkSpaceResourceId)
```

"Authenticate to ADB via managed service identity."

### fn spec.initProvider.withNewClusterConfig

```ts
withNewClusterConfig(newClusterConfig)
```

"Creates new clusters within the linked ADB instance as defined in the new_cluster_config block below."

### fn spec.initProvider.withNewClusterConfigMixin

```ts
withNewClusterConfigMixin(newClusterConfig)
```

"Creates new clusters within the linked ADB instance as defined in the new_cluster_config block below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withParameters

```ts
withParameters(parameters)
```

"A map of parameters to associate with the Data Factory Linked Service."

### fn spec.initProvider.withParametersMixin

```ts
withParametersMixin(parameters)
```

"A map of parameters to associate with the Data Factory Linked Service."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.instancePool

"Leverages an instance pool within the linked ADB instance as one instance_pool block defined below."

### fn spec.initProvider.instancePool.withClusterVersion

```ts
withClusterVersion(clusterVersion)
```

"Spark version of a the cluster."

### fn spec.initProvider.instancePool.withInstancePoolId

```ts
withInstancePoolId(instancePoolId)
```

"Identifier of the instance pool within the linked ADB instance."

### fn spec.initProvider.instancePool.withMaxNumberOfWorkers

```ts
withMaxNumberOfWorkers(maxNumberOfWorkers)
```

"The max number of worker nodes. Set this value if you want to enable autoscaling between the min_number_of_workers and this value. Omit this value to use a fixed number of workers defined in the min_number_of_workers property."

### fn spec.initProvider.instancePool.withMinNumberOfWorkers

```ts
withMinNumberOfWorkers(minNumberOfWorkers)
```

"The minimum number of worker nodes. Defaults to 1."

## obj spec.initProvider.keyVaultPassword

"Authenticate to ADB via Azure Key Vault Linked Service as defined in the key_vault_password block below."

### fn spec.initProvider.keyVaultPassword.withLinkedServiceName

```ts
withLinkedServiceName(linkedServiceName)
```

"Specifies the name of an existing Key Vault Data Factory Linked Service."

### fn spec.initProvider.keyVaultPassword.withSecretName

```ts
withSecretName(secretName)
```

"Specifies the secret name in Azure Key Vault that stores ADB access token."

## obj spec.initProvider.msiWorkSpaceResourceIdRef

"Reference to a Workspace in databricks to populate msiWorkSpaceResourceId."

### fn spec.initProvider.msiWorkSpaceResourceIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.msiWorkSpaceResourceIdRef.policy

"Policies for referencing."

### fn spec.initProvider.msiWorkSpaceResourceIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.msiWorkSpaceResourceIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.msiWorkSpaceResourceIdSelector

"Selector for a Workspace in databricks to populate msiWorkSpaceResourceId."

### fn spec.initProvider.msiWorkSpaceResourceIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.msiWorkSpaceResourceIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.msiWorkSpaceResourceIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.msiWorkSpaceResourceIdSelector.policy

"Policies for selection."

### fn spec.initProvider.msiWorkSpaceResourceIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.msiWorkSpaceResourceIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."